Cambio de colores y corrección de barra logo

--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
 			<div class="l-subheader-h i-widgets i-cf">
 
 				<div class="w-logo  with_title">
-					<a class="w-logo-link" href="index.html">
-												<span class="w-logo-title"><strong>ZEPHYR</strong></span>
+				<a class="w-logo-link" href="index.html">
+												
+                                                <span class="w-logo-title"><img src="png/logotipo-pixelbake.png" width="211" height="70" alt="Logotipo PixelBake">
 					</a>
-				</div>
+	      </div>
 
 				
 				<!-- CART -->
